--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:alstjr4434@naver.com"
+      # url: "mailto:alstjr4434@naver.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
