--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "LIKE BLOG"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "김민석"
-description              : "안드로이드 개발 블로그."
+description              : "안드로이드 개발 블로그"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
