--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ user_email: "alstjr4434@naver.com"
 contact_url: "https://goo.gl/tVljbV"
 google_tracking_id: "UA-96359860-1"
 google_site_verification: "UA-96359860-1"
-disqus_shortname: "matjek"
+disqus_shortname: "min._.dda"
 
 # Build settings
 markdown: kramdown
