--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: min._.dda Blog
 description: > # this means to ignore newlines until "baseurl:"
   Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
-baseurl: "/mindda"
+baseurl: "/"
 url: "https://sun5066.github.io"
 permalink: /:year/:month/:day/:title
 repository: ShawnTeoh/matjek
