--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: min._.dda Blog
-description: > # this means to ignore newlines until "baseurl:"
-  Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
+description: #할 말 없는뎅
 baseurl: "/"
 url: "https://sun5066.github.io"
 permalink: /:year/:month/:day/:title
